fixed scrollbar in summary

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -213,10 +213,9 @@
 }
 
 .custom-style-contacts {
-  height: 100vh;
+  height: calc(100vh - 89px);
   display: flex;
   margin-left: 232px;
-  padding-bottom: 50px;
   background-color: rgba(246, 247, 248, 255);
 }
 
@@ -260,7 +259,6 @@
 }
 
 #contactsListContainer {
-  max-height: 100%;
   margin-top: 2px;
   width: 450px;
   padding: 32px 16px 32px 16px;
@@ -553,6 +551,7 @@
 
   #contactsListContainer {
     width: 100%;
+    height: calc(100vh - 160px);
   }
 
   #seperatorHorizontal {
